chore: fix deprecations (#27)
Co-authored-by: Marco De Toma <marco.de.toma@fastned.nl>