@@ -33,7 +33,7 @@ class SandboxFinancialInstitutionsServiceImplTest {
     private static final String API_ENDPOINT = "https://api.ibanity.com/sandbox/financial-institutions";
     private static final String API_SCHEMA_ENDPOINT = "https://api.ibanity.com/sandbox/financial-institutions/{financialInstitutionId}";
     private static final String API_ENDPOINT_WITH_ID = API_ENDPOINT + "/" + FINANCIAL_INSTITUTION_ID;
-    private static final List<String> AUTHORIZATION_MODELS = Arrays.asList("detailed", "financialInstitutionOffered");
+    private static final List<String> AUTHORIZATION_MODELS = List.of("detailed", "financialInstitutionOffered");
 
     @InjectMocks
     private SandboxFinancialInstitutionsServiceImpl sandboxFinancialInstitutionsService;
